
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buf ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int LEN ;
 int exit (int ) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

void

term (int p, int c)

{

  char buf[LEN];

  fd_set rfds;

  int i;



  while (1)

    {

      FD_ZERO (&rfds);

      FD_SET (p, &rfds);

      FD_SET (c, &rfds);

      if (select ((p > c ? p : c) + 1, &rfds, ((void*)0), ((void*)0), ((void*)0)) < 1)

 return;

      if (FD_ISSET (c, &rfds))

 {

   if ((i = read (c, buf, sizeof (buf))) < 1)

     exit (0);

   else

     write (p, buf, i);

 }

      if (FD_ISSET (p, &rfds))

 {

   if ((i = read (p, buf, sizeof (buf))) < 1)

     exit (0);

   else

     write (c, buf, i);

 }

    }

}
