; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_19645.c_term.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_19645.c_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @term(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* @LEN, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %5, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %6, align 8
  br label %13

13:                                               ; preds = %66, %2
  br label %14

14:                                               ; preds = %13
  %15 = call i32 @FD_ZERO(i32* %7)
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @FD_SET(i32 %16, i32* %7)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @FD_SET(i32 %18, i32* %7)
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp sgt i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %14
  %24 = load i32, i32* %3, align 4
  br label %27

25:                                               ; preds = %14
  %26 = load i32, i32* %4, align 4
  br label %27

27:                                               ; preds = %25, %23
  %28 = phi i32 [ %24, %23 ], [ %26, %25 ]
  %29 = add nsw i32 %28, 1
  %30 = call i32 @select(i32 %29, i32* %7, i32* null, i32* null, i32* null)
  %31 = icmp slt i32 %30, 1
  br i1 %31, label %32, label %34

32:                                               ; preds = %27
  %33 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %33)
  ret void

34:                                               ; preds = %27
  %35 = load i32, i32* %4, align 4
  %36 = call i64 @FD_ISSET(i32 %35, i32* %7)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %50

38:                                               ; preds = %34
  %39 = load i32, i32* %4, align 4
  %40 = trunc i64 %10 to i32
  %41 = call i32 @read(i32 %39, i8* %12, i32 %40)
  store i32 %41, i32* %8, align 4
  %42 = icmp slt i32 %41, 1
  br i1 %42, label %43, label %45

43:                                               ; preds = %38
  %44 = call i32 @exit(i32 0) #4
  unreachable

45:                                               ; preds = %38
  %46 = load i32, i32* %3, align 4
  %47 = load i32, i32* %8, align 4
  %48 = call i32 @write(i32 %46, i8* %12, i32 %47)
  br label %49

49:                                               ; preds = %45
  br label %50

50:                                               ; preds = %49, %34
  %51 = load i32, i32* %3, align 4
  %52 = call i64 @FD_ISSET(i32 %51, i32* %7)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %66

54:                                               ; preds = %50
  %55 = load i32, i32* %3, align 4
  %56 = trunc i64 %10 to i32
  %57 = call i32 @read(i32 %55, i8* %12, i32 %56)
  store i32 %57, i32* %8, align 4
  %58 = icmp slt i32 %57, 1
  br i1 %58, label %59, label %61

59:                                               ; preds = %54
  %60 = call i32 @exit(i32 0) #4
  unreachable

61:                                               ; preds = %54
  %62 = load i32, i32* %4, align 4
  %63 = load i32, i32* %8, align 4
  %64 = call i32 @write(i32 %62, i8* %12, i32 %63)
  br label %65

65:                                               ; preds = %61
  br label %66

66:                                               ; preds = %65, %50
  br label %13
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @FD_ZERO(i32*) #2

declare dso_local i32 @FD_SET(i32, i32*) #2

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #2

declare dso_local i64 @FD_ISSET(i32, i32*) #2

declare dso_local i32 @read(i32, i8*, i32) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @write(i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
